# Multi-Vendor-Ecommerce-Platform

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt  schema.yml
accounts/: admin.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email_address_and_more.py  0003_vendorprofile_contact_number.py  0004_user_is_verified.py  0005_alter_vendorprofile_banner_url_and_more.py
api/: urls.py
multi_vendor_ecommerce/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  serializers.py  tasks.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  views.py
products/management/commands/: populate_db.py
products/migrations/: 0001_initial.py  0002_alter_productimage_image_url.py
templates/: index.html
templates/emails/: order_cancelled.html  order_cancelled.txt  order_confirmation.html  order_confirmation.txt  order_status_update.html  order_status_update.txt  payout_initiated.html  payout_initiated.txt  vendor_new_order.html  vendor_new_order.txt
utils/: send_mail.py
