[project]
name = "multi-vendor-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-filter",
    "celery",
    "redis>=7.4.0",
    "stripe>=15.0.0",
]
