[project]
name = "multi-vendor-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-filter",
    "celery",
    "redis>=7.4.0",
    "stripe>=15.0.0",
    "djangorestframework-stubs>=3.16.9",
    "psycopg2-binary>=2.9.11",
    "whitenoise>=6.12.0",
    "dj-database-url>=3.1.2",
    "django-cors-headers>=4.9.0",
    "django-celery-results>=2.6.0",
    "drf-spectacular>=0.29.0",
    "resend>=2.27.0",
    "pillow>=12.2.0",
    "gunicorn>=25.3.0",
]
